fix: price range